Enable some 100A app stacks in prod

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -74,6 +74,7 @@ Conditions:
 Resources:
   CmsStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -113,6 +114,7 @@ Resources:
 
   DovetailCdnArrangerStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -145,6 +147,7 @@ Resources:
 
   DovetailCountsStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -209,6 +212,7 @@ Resources:
 
   IdStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -310,6 +314,7 @@ Resources:
 
   RadiotopiaTowerStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
