Make outputs conditional

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -408,9 +408,12 @@ Outputs:
     Value: !GetAtt S3SigningStack.Outputs.SigningEndpointUrl
 
   CmsElasticsearchDomainName:
+    Condition: IsStaging # TODO
     Value: !GetAtt CmsStack.Outputs.ElasticsearchDomainName
 
   DovetailCdnArrangerFunctionArn:
+    Condition: IsStaging # TODO
     Value: !GetAtt DovetailCdnArrangerStack.Outputs.ArrangerFunctionArn
   DovetailCdnArrangerWorkspaceBucketArn:
+    Condition: IsStaging # TODO
     Value: !GetAtt DovetailCdnArrangerStack.Outputs.ArrangerWorkspaceBucketArn
