--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -278,7 +278,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         SecretsBase: !Ref SecretsBase
-        ContainerMemory: !If [IsProduction, !Ref ContainerMemory, 2000]
+        ContainerMemory: !If [IsProduction, 3000, 2000]
         ContainerMemoryReservation: !Ref ContainerMemoryReservation
         ContainerCpu: !Ref ContainerCpu
         PlatformALBListenerPriorityPrefix: !Ref AuguryPlatformALBListenerPriorityPrefix
@@ -289,7 +289,7 @@ Resources:
         ContainerPort: "3000"
         HealthCheckPath: "/health_check"
         DesiredWebs: "2"
-        DesiredWebsProduction: "2"
+        DesiredWebsProduction: "4"
         DesiredWorkers: "2"
         DesiredWorkersProduction: "2"
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
