Enable apps in prod

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -74,7 +74,6 @@ Conditions:
 Resources:
   CmsStack:
     Type: AWS::CloudFormation::Stack
-    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -114,7 +113,6 @@ Resources:
 
   DovetailCdnArrangerStack:
     Type: AWS::CloudFormation::Stack
-    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -147,7 +145,6 @@ Resources:
 
   DovetailCountsStack:
     Type: AWS::CloudFormation::Stack
-    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -185,7 +182,7 @@ Resources:
 
   DovetailTrafficStack:
     Type: AWS::CloudFormation::Stack
-    Condition: IsStaging
+    Condition: IsStaging # Staging only
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -313,7 +310,6 @@ Resources:
 
   RadiotopiaTowerStack:
     Type: AWS::CloudFormation::Stack
-    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -363,7 +359,7 @@ Resources:
 
   StyleguideStack:
     Type: AWS::CloudFormation::Stack
-    Condition: IsStaging
+    Condition: IsStaging # Staging only
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -407,12 +403,9 @@ Outputs:
     Value: !GetAtt S3SigningStack.Outputs.SigningEndpointUrl
 
   CmsElasticsearchDomainName:
-    Condition: IsStaging # TODO
     Value: !GetAtt CmsStack.Outputs.ElasticsearchDomainName
 
   DovetailCdnArrangerFunctionArn:
-    Condition: IsStaging # TODO
     Value: !GetAtt DovetailCdnArrangerStack.Outputs.ArrangerFunctionArn
   DovetailCdnArrangerWorkspaceBucketArn:
-    Condition: IsStaging # TODO
     Value: !GetAtt DovetailCdnArrangerStack.Outputs.ArrangerWorkspaceBucketArn
