Retain DB subnet groups

--- a/db/shared-apps-aurora-pg/database-cluster.yml
+++ b/db/shared-apps-aurora-pg/database-cluster.yml
@@ -143,6 +143,8 @@ Resources:
 
   DbSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       DBSubnetGroupDescription: !Sub >-
         Subnet group for the shared ${EnvironmentType} Aurora PostgreSQL
