--- a/db/shared-apps-aurora-mysql/database-cluster.yml
+++ b/db/shared-apps-aurora-mysql/database-cluster.yml
@@ -137,6 +137,8 @@ Resources:
 
   DbSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       DBSubnetGroupDescription: !Sub >-
         Subnet group for the shared ${EnvironmentType} Aurora MySQL containing
