Fix DLQ alarm thresholds

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -537,7 +537,7 @@ Resources:
         ${EnvironmentType} Feeder's dead-letter queue for the default callback
         queue is not empty, which means some job callbacks were not
         successfully processed.
-      ComparisonOperator: GreaterThanOrEqualToThreshold
+      ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: QueueName
           Value: !GetAtt DefaultJobDeadletterQueue.QueueName
@@ -612,7 +612,7 @@ Resources:
         ${EnvironmentType} Feeder's dead-letter queue for the Fixer callback
         queue is not empty, which means some Fixer or Porter job callbacks were
         not successfully processed.
-      ComparisonOperator: GreaterThanOrEqualToThreshold
+      ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: QueueName
           Value: !GetAtt FixerCallbackDeadletterQueue.QueueName
