Fix threshold value

--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -714,7 +714,7 @@ Resources:
       Namespace: AWS/SQS
       Period: 60
       Statistic: Average
-      Threshold:
+      Threshold: 0
       TreatMissingData: notBreaching
   DefaultJobDeadletterQueueMessageAlarmTags:
     Type: Custom::CloudWatchAlarmTags
