--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -18,12 +18,12 @@ Description: >-
 
 Parameters:
   # Optional
-  SharedRdsMysqlEndpoint: { Type: String, Default: "" }
   SharedAuroraMysqlEndpoint: { Type: String, Default: "" }
   SharedAuroraMysqlPort: { Type: String, Default: "3306" }
   SharedAuroraPostgresqlEndpoint: { Type: String, Default: "" }
   SharedAuroraPostgresqlPort: { Type: String, Default: "3306" }
   CastleRdsPostgresqlEndpoint: { Type: String, Default: "" }
+  SharedRdsMysqlEndpoint: { Type: String, Default: "" } # TODO Remove after Aurora switch
   # Required
   AwsOrganizationId: { Type: String }
   AsgKeyPairName:
