Pass queue names to web task definition

--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -239,6 +239,16 @@ Resources:
               Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
             - Name: DB_PORT_3306_TCP_PORT
               Value: "3306"
+            - Name: AUDIO_CALLBACK_QUEUE_NAME
+              Value: !GetAtt AudioCallbackQueue.QueueName
+            - Name: IMAGE_CALLBACK_QUEUE_NAME
+              Value: !GetAtt ImageCallbackQueue.QueueName
+            - Name: PODCAST_IMPORT_QUEUE_NAME
+              Value: !GetAtt PodcastImportQueue.QueueName
+            - Name: SEARCH_INDEXER_QUEUE_NAME
+              Value: !GetAtt SearchIndexerQueue.QueueName
+            - Name: DEFAULT_JOB_QUEUE_NAME
+              Value: !GetAtt DefaultJobQueue.QueueName
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
