--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -91,6 +91,7 @@ Parameters:
 
 Conditions:
   IsUsEast1: !Equals [!Ref "AWS::Region", us-east-1]
+  IsStaging: !Equals [!Ref EnvironmentType, Staging]
 
 Resources:
   AuguryStack:
@@ -158,6 +159,7 @@ Resources:
 
   CastleStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -223,6 +225,7 @@ Resources:
 
   ExchangeStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -264,6 +267,7 @@ Resources:
 
   FeederStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
@@ -302,6 +306,7 @@ Resources:
 
   NetworksStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
