--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -428,8 +428,10 @@ Resources:
 
 Outputs:
   FeederVanityAlbDomain:
+    Condition: IsStaging # TODO
     Value: !GetAtt FeederStack.Outputs.VanityAlbDomain
   FeederAlbName:
+    Condition: IsStaging # TODO
     Value: !GetAtt FeederStack.Outputs.AlbName
   CastleRedisCacheName:
     Value: !GetAtt CastleStack.Outputs.RedisCacheName
