--- a/stacks/apps/proxy.yml
+++ b/stacks/apps/proxy.yml
@@ -104,7 +104,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub WARN [S3 Signing] Lambda function <${EnvironmentTypeAbbreviation}> INVOCATIONS ERRORS (${RootStackName})
+      AlarmName: !Sub WARN [Proxy] Lambda function <${EnvironmentTypeAbbreviation}> INVOCATIONS ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Proxy Lambda function is failing, which likely
         means requests to prx.org are also failing.
