--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1168,6 +1168,7 @@ Resources:
       TimeoutInMinutes: 40
   Apps300AStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !GetAtt Constants.CloudFormationNotificationArn
