--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -437,7 +437,10 @@ Resources:
       InlineCode: |
         const response = require('cfn-response');
         const AWS = require('aws-sdk');
-        const cloudwatch = new AWS.CloudWatch();
+        const cloudwatch = new AWS.CloudWatch({
+          maxRetries: 5,
+          retryDelayOptions: { base: 1100 }
+        });
 
         exports.handler = async (event, context) => {
           console.log(event);
@@ -509,7 +512,7 @@ Resources:
         prx:cloudformation:root-stack-id: !Ref RootStackId
         prx:ops:environment: !Ref EnvironmentType
         prx:dev:application: Infrastructure
-      Timeout: 8
+      Timeout: 60
   CloudWatchAlarmTaggerFunctionLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
