--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -128,7 +128,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:family, Value: Dovetail }
-        - { Key: prx:dev:application, Value: Router } # TODO
+        - { Key: prx:dev:application, Value: Router }
       TemplateURL: !Sub ${TemplateUrlPrefix}/dovetail-router.yml
       TimeoutInMinutes: 20
 
