Use arm64 for custom resource functions

--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -14,6 +14,7 @@ Resources:
   AmazonSesSmtpCredentialsGeneratorFunction:
     Type: AWS::Serverless::Function
     Properties:
+      Architectures: [arm64]
       Description: >-
         Generates SES SMTP credentials for a given IAM access key and secret
       Handler: index.lambda_handler
@@ -109,6 +110,7 @@ Resources:
   S3StaticSiteDeployFunction:
     Type: AWS::Serverless::Function
     Properties:
+      Architectures: [arm64]
       Description: Deploys the contents of a zip archive to an S3 bucket
       Handler: index.lambda_handler
       InlineCode: |
@@ -246,6 +248,7 @@ Resources:
   AvailabilityZoneSelectorFunction:
     Type: AWS::Serverless::Function
     Properties:
+      Architectures: [arm64]
       Description: >-
         Provides information about the availability zones that can and should
         be used for the current region, including a list of zone names, and the
@@ -352,6 +355,7 @@ Resources:
   EchoFunction:
     Type: AWS::Serverless::Function
     Properties:
+      Architectures: [arm64]
       Description: >-
         Returns any resource properties as outputs. This can be useful when a
         derived value needs to be used several times within a template, but is
@@ -431,6 +435,7 @@ Resources:
   CloudWatchAlarmTaggerFunction:
     Type: AWS::Serverless::Function
     Properties:
+      Architectures: [arm64]
       Description: >-
         Manages resource tags from CloudWatch Alarms.
       Handler: index.handler
