Pass hostnames to old Metrics stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -656,6 +656,8 @@ Resources:
         MetricsSecretsVersion: !Ref MetricsSecretsVersion
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, FrontendMemory]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, FrontendCpu]
+        CastleHostname: !GetAtt Constants.CastleHostname
+        IdHostname: !GetAtt Constants.IdHostname
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
