--- a/stacks/container-apps/metrics.prx.org.yml
+++ b/stacks/container-apps/metrics.prx.org.yml
@@ -114,6 +114,10 @@ Resources:
               Value: !Ref MetricsSecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: AUTH_HOST # TODO Remove from secrets
+              Value: !Ref IdHostname
+            - Name: CASTLE_HOST # TODO Remove from secrets
+              Value: !Ref CastleHostname
           Essential: true
           Image: !Ref MetricsEcrImageTag
           LogConfiguration:
