--- a/stacks/container-apps/metrics.prx.org.yml
+++ b/stacks/container-apps/metrics.prx.org.yml
@@ -53,6 +53,8 @@ Parameters:
   # Metrics ENV ################################################################
   MetricsSecretsVersion:
     Type: String
+  CastleHostname: { Type: String }
+  IdHostname: { Type: String }
 
 Resources:
   MetricsLogGroup:
