--- a/stacks/container-apps/metrics.prx.org.yml
+++ b/stacks/container-apps/metrics.prx.org.yml
@@ -116,9 +116,9 @@ Resources:
               Value: !Ref MetricsSecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
-            - Name: AUTH_HOST # TODO Remove from secrets
+            - Name: AUTH_HOST
               Value: !Ref IdHostname
-            - Name: CASTLE_HOST # TODO Remove from secrets
+            - Name: CASTLE_HOST
               Value: !Ref CastleHostname
           Essential: true
           Image: !Ref MetricsEcrImageTag
