Add target group requests to dashboard

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -409,3 +409,8 @@ Outputs:
     Value: !GetAtt DovetailCdnArrangerStack.Outputs.ArrangerFunctionArn
   DovetailCdnArrangerWorkspaceBucketArn:
     Value: !GetAtt DovetailCdnArrangerStack.Outputs.ArrangerWorkspaceBucketArn
+
+  PlayProxyTargetGroupFullName:
+    Value: !GetAtt PlayStack.Outputs.ProxyTargetGroupFullName
+  PlayWebTargetGroupFullName:
+    Value: !GetAtt PlayStack.Outputs.WebTargetGroupFullName
