--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -422,13 +422,20 @@ Resources:
       TimeoutInMinutes: 20
 
 Outputs:
-  FeederVanityAlbDomain:
-    Value: !GetAtt FeederStack.Outputs.VanityAlbDomain
-  FeederAlbName:
-    Value: !GetAtt FeederStack.Outputs.AlbName
+  BetaDeployBucketRegionalDomainName:
+    Value: !GetAtt BetaStack.Outputs.DeployBucketRegionalDomainName
+
   CastleRedisCacheName:
     Value: !GetAtt CastleStack.Outputs.RedisCacheName
   CastleRedisCachePrimaryEndPointAddress:
     Value: !GetAtt CastleStack.Outputs.RedisCachePrimaryEndPointAddress
-  BetaDeployBucketRegionalDomainName:
-    Value: !GetAtt BetaStack.Outputs.DeployBucketRegionalDomainName
+  CastleTargetGroupFullName:
+    Value: !GetAtt CastleStack.Outputs.TargetGroupFullName
+
+  FeederVanityAlbDomain:
+    Value: !GetAtt FeederStack.Outputs.VanityAlbDomain
+  FeederAlbName:
+    Value: !GetAtt FeederStack.Outputs.AlbName
+
+  PublishTargetGroupFullName:
+    Value: !GetAtt PublishStack.Outputs.TargetGroupFullName
