--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -199,3 +199,6 @@ Outputs:
     Value: !GetAtt DovetailRouterStack.Outputs.VanityAlbDomain
   DovetailAlbName:
     Value: !GetAtt DovetailRouterStack.Outputs.AlbName
+
+  MetricsTargetGroupFullName:
+    Value: !GetAtt MetricsStack.Outputs.TargetGroupFullName
