--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -380,3 +380,5 @@ Outputs:
     Value: !Ref RedisReplicationGroup
   RedisCachePrimaryEndPointAddress:
     Value: !GetAtt RedisReplicationGroup.PrimaryEndPoint.Address
+  TargetGroupFullName:
+    Value: !GetAtt TargetGroup.TargetGroupFullName
