--- a/stacks/apps/metrics.yml
+++ b/stacks/apps/metrics.yml
@@ -227,3 +227,7 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Metrics }
       TaskRoleArn: !GetAtt TaskRole.Arn
+
+Outputs:
+  TargetGroupFullName:
+    Value: !GetAtt TargetGroup.TargetGroupFullName
