--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -409,3 +409,9 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Play }
       TaskRoleArn: !GetAtt TaskRole.Arn
+
+Outputs:
+  ProxyTargetGroupFullName:
+    Value: !GetAtt ProxyTargetGroup.TargetGroupFullName
+  WebTargetGroupFullName:
+    Value: !GetAtt WebTargetGroup.TargetGroupFullName
