--- a/stacks/apps/publish.yml
+++ b/stacks/apps/publish.yml
@@ -401,3 +401,7 @@ Resources:
     Properties:
       CloudFrontOriginAccessIdentityConfig:
         Comment: !Sub Publish uploads ${AWS::StackName} # TODO
+
+Outputs:
+  TargetGroupFullName:
+    Value: !GetAtt TargetGroup.TargetGroupFullName
