--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1161,27 +1161,51 @@ Resources:
         - !GetAtt Constants.CloudFormationNotificationArn
       Parameters:
         EnvironmentType: !Ref EnvironmentType
+
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackName
+
+        InfrastructureGitCommit: !Ref InfrastructureGitCommit
+
         SharedEcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
+
         SharedVpcId: !GetAtt SharedVpcStack.Outputs.VpcId
         SharedVpcCidrBlock: !GetAtt SharedVpcStack.Outputs.VpcCidrBlock
-        SharedVpcFlowLogsLogGroupName: !GetAtt SharedVpcStack.Outputs.FlowLogsLogGroupName
+
         SharedEcsAsgName: !GetAtt SharedEcsAsgStack.Outputs.AsgName
+
         SharedAlbName: !GetAtt SharedAlbStack.Outputs.AlbName
-        FeederAlbName: !GetAtt Apps200AStack.Outputs.FeederAlbName
-        DovetailAlbName: !GetAtt Apps300AStack.Outputs.DovetailAlbName
+        SharedAlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
+        SharedAlbVanityDomain: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
+
         SharedMemcachedCacheName: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheName
         SharedRedisReplicationGroupName: !GetAtt SharedRedisStack.Outputs.ReplicationGroupName
-        CastleRedisCacheName: !GetAtt Apps200AStack.Outputs.CastleRedisCacheName
-        CmsElasticsearchDomainName: !GetAtt Apps100AStack.Outputs.CmsElasticsearchDomainName
-        SharedAlbVanityDomain: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
-        FeederVanityAlbDomain: !GetAtt Apps200AStack.Outputs.FeederVanityAlbDomain
-        DovetailVanityAlbDomain: !GetAtt Apps300AStack.Outputs.DovetailVanityAlbDomain
-        InfrastructureGitCommit: !Ref InfrastructureGitCommit
+
         StackResourceGroupName: !GetAtt ResourceGroupsStack.Outputs.StackResourceGroupName
-        BetaDeployBucketRegionalDomainName: !GetAtt Apps200AStack.Outputs.BetaDeployBucketRegionalDomainName
+
+        SharedVpcFlowLogsLogGroupName: !GetAtt SharedVpcStack.Outputs.FlowLogsLogGroupName
+
         BacksawDeployBucketRegionalDomainName: !GetAtt Apps400AStack.Outputs.BacksawDeployBucketRegionalDomainName
+
+        BetaDeployBucketRegionalDomainName: !GetAtt Apps200AStack.Outputs.BetaDeployBucketRegionalDomainName
+
+        CastleRedisCacheName: !GetAtt Apps200AStack.Outputs.CastleRedisCacheName
+        CastleTargetGroupFullName: !GetAtt Apps200AStack.Outputs.CastleTargetGroupFullName
+
+        CmsElasticsearchDomainName: !GetAtt Apps100AStack.Outputs.CmsElasticsearchDomainName
+
+        DovetailAlbName: !GetAtt Apps300AStack.Outputs.DovetailAlbName
+        DovetailVanityAlbDomain: !GetAtt Apps300AStack.Outputs.DovetailVanityAlbDomain
+
+        FeederAlbName: !GetAtt Apps200AStack.Outputs.FeederAlbName
+        FeederVanityAlbDomain: !GetAtt Apps200AStack.Outputs.FeederVanityAlbDomain
+
+        MetricsTargetGroupFullName: !GetAtt Apps300AStack.Outputs.MetricsTargetGroupFullName
+
+        PlayProxyTargetGroupFullName: !GetAtt Apps100AStack.Outputs.PlayProxyTargetGroupFullName
+        PlayWebTargetGroupFullName: !GetAtt Apps100AStack.Outputs.PlayWebTargetGroupFullName
+
+        PublishTargetGroupFullName: !GetAtt Apps200AStack.Outputs.PublishTargetGroupFullName
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
