Switch new Castle to shared Redis

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -31,6 +31,8 @@ Parameters:
   VpcPrivateSubnet3Id: { Type: AWS::EC2::Subnet::Id }
   SharedMemcachedEndpointAddress: { Type: String }
   SharedMemcachedEndpointPort: { Type: String }
+  SharedRedisReplicationGroupEndpointAddress: { Type: String }
+  SharedRedisReplicationGroupEndpointPort: { Type: String }
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
   EchoServiceToken: { Type: String }
   CloudWatchAlarmTaggerServiceToken: { Type: String }
@@ -166,9 +168,6 @@ Resources:
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
         EcsClusterArn: !Ref EcsClusterArn
         VpcId: !Ref VpcId
-        VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
-        VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
-        VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref CastleEcrImageTag
         SecretsVersion: !Ref CastleSecretsVersion
@@ -179,8 +178,9 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
-        SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
         CastleRdsPostgresqlEndpoint: !Ref CastleRdsPostgresqlEndpoint
+        SharedRedisReplicationGroupEndpointAddress: !Ref SharedRedisReplicationGroupEndpointAddress
+        SharedRedisReplicationGroupEndpointPort: !Ref SharedRedisReplicationGroupEndpointPort
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -425,8 +425,6 @@ Outputs:
   BetaDeployBucketRegionalDomainName:
     Value: !GetAtt BetaStack.Outputs.DeployBucketRegionalDomainName
 
-  CastleRedisCacheName:
-    Value: !GetAtt CastleStack.Outputs.RedisCacheName
   CastleRedisCachePrimaryEndPointAddress:
     Value: !GetAtt CastleStack.Outputs.RedisCachePrimaryEndPointAddress
   CastleTargetGroupFullName:
