--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -977,6 +977,8 @@ Resources:
         VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
         SharedMemcachedEndpointAddress: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointAddress
         SharedMemcachedEndpointPort: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointPort
+        SharedRedisReplicationGroupEndpointAddress: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointAddress
+        SharedRedisReplicationGroupEndpointPort: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointPort
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
         EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
         CloudWatchAlarmTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchAlarmTaggerServiceToken
@@ -1189,7 +1191,6 @@ Resources:
 
         BetaDeployBucketRegionalDomainName: !GetAtt Apps200AStack.Outputs.BetaDeployBucketRegionalDomainName
 
-        CastleRedisCacheName: !GetAtt Apps200AStack.Outputs.CastleRedisCacheName
         CastleTargetGroupFullName: !GetAtt Apps200AStack.Outputs.CastleTargetGroupFullName
 
         CmsElasticsearchDomainName: !GetAtt Apps100AStack.Outputs.CmsElasticsearchDomainName
