Add Remix requests to dashboard

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -435,3 +435,6 @@ Outputs:
 
   PublishTargetGroupFullName:
     Value: !GetAtt PublishStack.Outputs.TargetGroupFullName
+
+  RemixTargetGroupFullName:
+    Value: !GetAtt RemixStack.Outputs.TargetGroupFullName
