--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -51,6 +51,8 @@ Parameters:
 
   PublishTargetGroupFullName: { Type: String }
 
+  RemixTargetGroupFullName: { Type: String }
+
 Resources:
   StackOverviewDashboard:
     Type: AWS::CloudWatch::Dashboard
@@ -109,7 +111,8 @@ Resources:
                           [ ".", ".", ".", "${MetricsTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Metrics" } ],
                           [ ".", ".", ".", "${PlayProxyTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Play::Proxy" } ],
                           [ ".", ".", ".", "${PlayWebTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Play::Web" } ],
-                          [ ".", ".", ".", "${PublishTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Publish" } ]
+                          [ ".", ".", ".", "${PublishTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Publish" } ],
+                          [ ".", ".", ".", "${RemixTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Remix" } ]
                       ],
                       "view": "timeSeries",
                       "stacked": false,
