--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1207,6 +1207,8 @@ Resources:
         PlayWebTargetGroupFullName: !GetAtt Apps100AStack.Outputs.PlayWebTargetGroupFullName
 
         PublishTargetGroupFullName: !GetAtt Apps200AStack.Outputs.PublishTargetGroupFullName
+
+        RemixTargetGroupFullName: !GetAtt Apps200AStack.Outputs.RemixTargetGroupFullName
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
